--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,14 @@ jobs:
 
       - name: TypeScript check
         run: |
-          npx tsc --noEmit > ts-errors.txt 2>&1 || true
+         npx tsc --noEmit > ts-errors.txt 2>&1 || true
+
+      - name: Upload TS errors
+         uses: actions/upload-artifact@v3
+         with:
+            name: typescript-errors
+            path: ts-errors.txt
+
 
 
       - name: Expo build check (web export)
