--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,18 +22,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # === TypeScript Check + Save Errors to File ===
       - name: TypeScript check
-        run: |
-          npx tsc --noEmit > ts-errors.txt 2>&1 || true
+        run: npx tsc --noEmit
 
-      # === Upload Error Output as Artifact ===
-      - name: Upload TypeScript errors
-        uses: actions/upload-artifact@v3
-        with:
-          name: typescript-errors
-          path: ts-errors.txt
-
-      # === Expo Build Check (Web Export Only) ===
-      - name: Expo build check
+      - name: Expo build check (web export)
         run: npx expo export --platform web
