Added lint for better formatting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,10 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Lint code
+        run: npx eslint .
+
+
       - name: TypeScript check
         run: npx tsc --noEmit
 
